--- a/Scrilla.Web/Pages/Index.razor
+++ b/Scrilla.Web/Pages/Index.razor
@@ -1,7 +1,62 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@using Scrilla.Web.Data
+@inject WalletService walletService
 
-Welcome to your new app.
+<h1>Wallet Overview</h1>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@if (wallets == null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+
+    <table class="table">
+        <tr>
+            <th>Exchange Name</th>
+            <th>Coin Name</th>
+            <th>Amount</th>
+            <th>CAD</th>
+        </tr>
+        @foreach (var w in wallets)
+        {
+            <tr>
+                <td>@w.ExchangeName</td>
+                <td>@w.CoinName</td>
+                <td>@w.Amount</td>
+                <td>@w.Cad</td>
+            </tr>
+        }
+
+    </table>
+}
+
+
+@code {
+
+    private System.Threading.Timer timer;
+
+    private List<Wallet> wallets;
+    protected override void OnInitialized()
+    {
+        timer = new System.Threading.Timer(async _ =>
+        {
+            await GetWallets();
+            await InvokeAsync(StateHasChanged);
+        }, null, 0, 2000);
+        //await Task.Delay(5000);
+        ////wallets = await walletService.GetAllWalletsAsync();
+        //while (true)
+        //{
+        //    await GetWallets();
+        //    await Task.Delay(2000);
+        //    StateHasChanged();
+        //}
+    }
+
+    private async Task GetWallets()
+    {
+        wallets = await walletService.GetAllWalletsAsync();
+    }
+}
