--- a/Scrilla.Web/wwwroot/css/site.css
+++ b/Scrilla.Web/wwwroot/css/site.css
@@ -47,7 +47,7 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #000000 0%, #FFFFFF 70%);
 }
 
     .sidebar .top-row {
