Added Trading Platforms to DI chain

--- a/Scrilla.Web/Pages/Index.razor
+++ b/Scrilla.Web/Pages/Index.razor
@@ -75,7 +75,7 @@ else
 
     private async Task GetWallets()
     {
-        wallets = await walletService.GetAllWalletsAsync();
+        wallets = await walletService.GetAllWalletViewsAsync();
     }
 
     private bool chartsCreated = false;
